--- a/index.html
+++ b/index.html
@@ -2,19 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Kamień, papier, nożyce</title>
+	<title>kamień, papier, nożyce</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container">
 		<div id="buttons">
-			<button id="button-rock">Kamień</button>
-			<button id="button-paper">Papier</button>
-			<button id="button-scissors">Nożyce</button>
+			<button id="button-rock">kamień</button>
+			<button id="button-paper">papier</button>
+			<button id="button-scissors">nożyce</button>
 			<button id="button-test">Test</button>
 		</div>
 		<div id="messages"></div>
 	</div>
+		<div class="wyniki">
+			<h3>WYNIKI</h3>
+				<p class="numbers">losowań:<span>0</span></p>
+				<p class="won">wygrane:<span>0</span></p>
+				<p class="lost">przegrane:<span>0</span></p>
+				<p class="draw">remis:<span>0</span></p>
+		</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
 </body>
